NXT-2255: Serve *View.js addtionally to *View.umd.js
The latter is temporarily kept for 'backwards compatibility' until the
pagebuilder is updated to make it obsolete.

NXT-2255 (Contain styles (shadow root) for external dynamic loaded views (e.g. port table view))